FIxed icon alignment and border

--- a/scss/chart.scss
+++ b/scss/chart.scss
@@ -666,6 +666,7 @@ body {
         width: 100%;
         padding: 0 12px;
         overflow: hidden;
+        border-bottom: 1px solid $gray2;
     }
 
     .docked-table-header {
@@ -679,7 +680,6 @@ body {
         display: flex;
         align-items: center;
         flex-direction: row;
-        border-bottom: 1px solid $gray2;
 
         .align-btn-container {
           display: flex;
@@ -693,6 +693,7 @@ body {
             padding: 4px 0px;
             cursor: pointer;
             visibility: hidden;
+            display: flex;
 
             &.active {
                 .svg-icon {
